--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Shuffle Bootstrap Template - Index</title>
+  <title>Crownvalz Bootstrap Template - Index</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -28,11 +28,11 @@
   <link href="assets/css/style.css" rel="stylesheet">
 
   <!-- =======================================================
-  * Template Name: Shuffle
+  * Template Name: Crownvalz
   * Updated: Sep 18 2023 with Bootstrap v5.3.2
-  * Template URL: https://bootstrapmade.com/bootstrap-3-one-page-template-free-shuffle/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
+  * Template URL: https://Crownvalz.com/bootstrap-3-one-page-template-free-Crownvalz/
+  * Author: Crownvalz.com
+  * License: https://Crownvalz.com/license/
   ======================================================== -->
 </head>
 
@@ -51,7 +51,7 @@
           <div class="carousel-item active" style="background-image: url(assets/img/slide/slide-1.jpeg);">
             <div class="carousel-container">
               <div class="carousel-content">
-                <h2 class="animate__animated animate__fadeInDown">Welcome to <span>Shuffle</span></h2>
+                <h2 class="animate__animated animate__fadeInDown">Welcome to <span>Crownvalz</span></h2>
                 <p class="animate__animated animate__fadeInUp">Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
                 <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Get Started</a>
               </div>
@@ -99,7 +99,7 @@
     <div class="container d-flex align-items-center justify-content-between">
 
       <div class="logo">
-        <h1 class="text-light"><a href="index.html"><span>Shuffle</span></a></h1>
+        <h1 class="text-light"><a href="index.html"><span>Crownvalz</span></a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
@@ -728,7 +728,7 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-info">
-            <h3>Shuffle</h3>
+            <h3>Crownvalz</h3>
             <p>
               A108 Adam Street <br>
               NY 535022, USA<br><br>
@@ -781,14 +781,14 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Shuffle</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>Crownvalz</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/bootstrap-3-one-page-template-free-shuffle/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        <!-- Licensing information: https://Crownvalz.com/license/ -->
+        <!-- Purchase the pro version with working PHP/AJAX contact form: https://Crownvalz.com/bootstrap-3-one-page-template-free-Crownvalz/ -->
+        Designed by <a href="https://Crownvalz.com/">Crownvalz</a>
       </div>
     </div>
   </footer><!-- End Footer -->
