--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio Details - Shufle Bootstrap Template</title>
+  <title>Portfolio Details - Crownvalz Bootstrap Template</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -30,9 +30,9 @@
   <!-- =======================================================
   * Template Name: Shuffle
   * Updated: Sep 18 2023 with Bootstrap v5.3.2
-  * Template URL: https://bootstrapmade.com/bootstrap-3-one-page-template-free-shuffle/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
+  * Template URL: https://Crownvalz.com/bootstrap-3-one-page-template-free-shuffle/
+  * Author: Crownvalz.com
+  * License: https://Crownvalz.com/license/
   ======================================================== -->
 </head>
 
@@ -215,9 +215,9 @@
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/bootstrap-3-one-page-template-free-shuffle/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        <!-- Licensing information: https://Crownvalz.com/license/ -->
+        <!-- Purchase the pro version with working PHP/AJAX contact form: https://Crownvalz.com/bootstrap-3-one-page-template-free-shuffle/ -->
+        Designed by <a href="https://Crownvalz.com/">Crownvalz</a>
       </div>
     </div>
   </footer><!-- End Footer -->
