--- a/g.html
+++ b/g.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>123 Bank Plc</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
+    <title>Bond Calculator</title>
+    <!-- Bootstrap 5 CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         /* Custom Styling */
         body {
@@ -39,11 +39,11 @@
             color: #fff;
         }
         .navbar {
-            background-color: lightgray; /* Light gray color */
-            position: sticky; /* Sticky position */
-            top: 0; /* Stick to top */
-            z-index: 1000; /* Ensure it's above other content */
             padding: 1rem 1.5rem; /* Add padding for better spacing */
+            background-color: #e9ecef; /* Light gray background */
+            position: sticky; /* Make navbar sticky */
+            top: 0; /* Stick to the top */
+            z-index: 1000; /* Ensure it stays above other content */
         }
         .nav-link {
             font-size: 1.1rem; /* Increase font size */
@@ -68,15 +68,9 @@
         .calculator-card h2 {
             text-align: center; /* Center the title */
         }
-        /* Hamburger Menu Animation */
+        /* Hide square border around the toggler */
         .navbar-toggler {
-            border: none; /* Remove square border */
-        }
-        .navbar-toggler.collapsed .navbar-toggler-icon {
-            background-image: url('data:image/svg+xml;charset=utf8,%3Csvg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30"%3E%3Cpath stroke="black" stroke-width="2" d="M5 7h20M5 15h20M5 23h20"/%3E%3C/svg%3E'); /* Three lines */
-        }
-        .navbar-toggler:not(.collapsed) .navbar-toggler-icon {
-            background-image: url('data:image/svg+xml;charset=utf8,%3Csvg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30"%3E%3Cpath stroke="black" stroke-width="2" d="M5 5l20 20M5 25l20-20"/%3E%3C/svg%3E'); /* X mark */
+            border: none;
         }
     </style>
 </head>
@@ -85,7 +79,7 @@
     <!-- Top Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light border-bottom">
         <a class="navbar-brand d-flex align-items-center" href="#">
-            <img src="img/logo.png" alt="Logo" class="me-2" style="width: 40px; height: auto;"> <!-- Adjust logo size -->
+            <img src="img/logo.png" alt="Logo" class="me-2" style="width: 40px; height: auto;">
             <h2 class="mb-0">123 Bank Plc</h2>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -106,73 +100,110 @@
         </div>
     </nav>
 
-    <!-- Main Content -->
     <div class="container">
-        <div class="calculator-card">
-            <h2>Bond Calculator</h2>
-            <form id="bondForm" class="needs-validation" novalidate>
-                <div class="mb-3">
-                    <label for="faceValue" class="form-label">Face Value</label>
-                    <input type="text" class="form-control" id="faceValue" required>
-                    <div class="invalid-feedback">Please enter a valid face value.</div>
-                </div>
-                <div class="mb-3">
-                    <label for="couponRate" class="form-label">Coupon Rate (%)</label>
-                    <input type="number" class="form-control" id="couponRate" required>
-                    <div class="invalid-feedback">Please enter a valid coupon rate.</div>
-                </div>
-                <div class="mb-3">
-                    <label for="yearsToMaturity" class="form-label">Years to Maturity</label>
-                    <input type="number" class="form-control" id="yearsToMaturity" required>
-                    <div class="invalid-feedback">Please enter a valid number of years.</div>
-                </div>
-                <div class="mb-3">
-                    <label for="paymentFrequency" class="form-label">Payment Frequency</label>
-                    <select class="form-select" id="paymentFrequency" required>
-                        <option value="" disabled selected>Select frequency</option>
-                        <option value="1">Annually</option>
-                        <option value="2">Semi-Annually</option>
-                        <option value="4">Quarterly</option>
-                        <option value="12">Monthly</option>
-                    </select>
-                    <div class="invalid-feedback">Please select a payment frequency.</div>
-                </div>
-                <button type="submit" class="btn btn-primary">Calculate</button>
-            </form>
-        </div>
-    </div>
+        <div class="row justify-content-center">
+            <div class="col-md-6">
+                <div class="calculator-card">
+                    <h2 class="mb-4">Bond Calculator</h2>
+                    <!-- Bond Calculator Form -->
+                    <form id="bondForm" class="mt-4 needs-validation" novalidate>
+                        <div class="mb-3">
+                            <label for="faceValue" class="form-label">Total Bond Amount (TZS)</label>
+                            <input type="text" class="form-control" id="faceValue" placeholder="Enter bond's face value" required>
+                            <div class="invalid-feedback">
+                                Please enter a valid bond amount.
+                            </div>
+                        </div>
 
-    <!-- Modal -->
-    <div class="modal fade" id="resultModal" tabindex="-1" aria-labelledby="resultModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="resultModalLabel">Calculation Results</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <p id="annualCoupon"></p>
-                    <p id="totalInterest"></p>
-                    <p id="totalBondValue"></p>
-                    <p id="totalFutureValue"></p>
+                        <div class="mb-3">
+                            <label for="couponRate" class="form-label">Coupon Rate (%)</label>
+                            <input type="number" step="0.01" class="form-control" id="couponRate" placeholder="Enter coupon rate" required>
+                        </div>
+
+                        <div class="mb-3">
+                            <label for="yearsToMaturity" class="form-label">Bond Term in Years</label>
+                            <input type="number" class="form-control" id="yearsToMaturity" placeholder="Enter years to maturity" min="1" required>
+                        </div>
+
+                        <div class="mb-3">
+                            <label for="paymentFrequency" class="form-label">Coupon Payment Frequency</label>
+                            <select class="form-select" id="paymentFrequency" required>
+                                <option value="" disabled selected>Select frequency</option>
+                                <option value="1">Annually</option>
+                                <option value="2">Semi-Annually</option>
+                                <option value="4">Quarterly</option>
+                            </select>
+                            <div class="invalid-feedback">
+                                Please select a payment frequency.
+                            </div>
+                        </div>
+
+                        <div class="form-check mb-3">
+                            <input class="form-check-input" type="checkbox" value="" id="initiationFee">
+                            <label class="form-check-label" for="initiationFee">
+                                Include initiation fee in your bond?
+                            </label>
+                        </div>
+
+                        <button type="submit" class="btn btn-primary w-100">Calculate</button>
+                        <button type="reset" class="btn btn-outline-primary w-100 mt-2">Clear</button>
+                    </form>
                 </div>
             </div>
         </div>
     </div>
 
+    <!-- Result Modal -->
+    <div class="modal fade" id="resultModal" tabindex="-1" aria-labelledby="resultModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="resultModalLabel">Calculation Result</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="row">
+                        <div class="col-6"><strong>Annual Coupon Payment:</strong></div>
+                        <div class="col-6 text-end"><p id="annualCoupon"></p></div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <div class="col-6"><strong>Total Interest Earned:</strong></div>
+                        <div class="col-6 text-end"><p id="totalInterest"></p></div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <div class="col-6"><strong>Total Bond Value:</strong></div>
+                        <div class="col-6 text-end"><p id="totalBondValue"></p></div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <div class="col-6"><strong>Total Future Value:</strong></div>
+                        <div class="col-6 text-end"><p id="totalFutureValue"></p></div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Footer -->
     <footer>
-        &copy; 2024 123 Bank Plc. All rights reserved.
+        <p>Bond Calculator</p>
     </footer>
 
-    <!-- Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+    <!-- Bootstrap 5 JS and dependencies -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Custom Script -->
     <script>
         // Form validation
         (function () {
             'use strict';
             const forms = document.querySelectorAll('.needs-validation');
-
+            
             Array.prototype.slice.call(forms).forEach(function (form) {
                 form.addEventListener('submit', function (event) {
                     if (!form.checkValidity()) {
@@ -189,7 +220,9 @@
             return num.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",");
         }
 
-        document.getElementById('faceValue').addEventListener('input', function () {
+        document.getElementById('faceValue').addEventListener('input',
+
+ function () {
             // Remove non-digit characters
             let value = this.value.replace(/[^0-9]/g, '');
             // Format with commas
@@ -226,11 +259,6 @@
             // Show the modal
             const resultModal = new bootstrap.Modal(document.getElementById('resultModal'));
             resultModal.show();
-        });
-
-        // Add event listener to toggle class on navbar-toggler for hamburger menu animation
-        document.querySelector('.navbar-toggler').addEventListener('click', function () {
-            this.classList.toggle('collapsed');
         });
     </script>
 </body>
